; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/efi/libstub/extr_efi-stub-helper.c_efi_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/efi/libstub/extr_efi-stub-helper.c_efi_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EFI_ALLOC_ALIGN = common dso_local global i32 0, align 4
@EFI_PAGE_SIZE = common dso_local global i64 0, align 8
@free_pages = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @efi_free(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %3
  br label %21

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = load i32, i32* @EFI_ALLOC_ALIGN, align 4
  %14 = call i64 @round_up(i64 %12, i32 %13)
  %15 = load i64, i64* @EFI_PAGE_SIZE, align 8
  %16 = udiv i64 %14, %15
  store i64 %16, i64* %7, align 8
  %17 = load i32, i32* @free_pages, align 4
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @efi_call_early(i32 %17, i64 %18, i64 %19)
  br label %21

21:                                               ; preds = %11, %10
  ret void
}

declare dso_local i64 @round_up(i64, i32) #1

declare dso_local i32 @efi_call_early(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
